Fix note overflow

--- a/src/primitives/note/Note.module.scss
+++ b/src/primitives/note/Note.module.scss
@@ -16,6 +16,7 @@
   }
 
   .content {
+    overflow-y: auto;
     position: absolute;
     top: 0;
     bottom: 0;
